# ucc

./: configure.ac  setgpu.sh
config/m4/: configure.m4  rccl.m4  rocm.m4
src/: Makefile.am
src/coll_score/: ucc_coll_score.c
src/components/mc/rocm/: Makefile.am  mc_rocm.c  mc_rocm.h
src/components/mc/rocm/kernel/: Makefile.am  mc_rocm_reduce.cu  mc_rocm_reduce_multi.cu  mc_rocm_wait_kernel.cu
src/components/tl/nccl/: tl_nccl_team.c
src/components/tl/rccl/: Makefile.am  tl_rccl.c  tl_rccl.h  tl_rccl_coll.c  tl_rccl_coll.h  tl_rccl_context.c  tl_rccl_lib.c  tl_rccl_team.c
src/components/tl/rccl/allgatherv/: allgatherv.c
src/components/tl/ucp/: Makefile.am
src/utils/: ucc_math.h
test/gtest/: Makefile.am
test/gtest/core/: test_allgather.cc  test_allgatherv.cc  test_allreduce.cc  test_alltoall.cc  test_alltoallv.cc  test_bcast.cc  test_mc_rocm.cc
test/mpi/: Makefile.am  buffer.cc  main.cc  test_mpi.cc  test_mpi.h
tools/perf/: Makefile.am  ucc_perftest.h  ucc_pt_comm.cc  ucc_pt_config.cc
